[package]
name        = "ankurah-connector-local-process"
version     = "0.1.1"
edition     = "2021"
description = "Ankurah connector for local processes"
license     = "MIT OR Apache-2.0"

[dependencies]
ankurah-core  = { path = "../../core", version = "^0.1.1" }
ankurah-proto = { path = "../../proto", version = "^0.1.1" }

tokio       = { version = "1.40", features = ["full"] }
async-trait = "0.1"
anyhow      = "1.0"
