[package]
name          = "ankurah-connector-local-process"
version       = "0.7.4"
edition       = "2021"
description   = "Ankurah connector for local processes"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ankurah-connector-local-process"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[dependencies]
ankurah-core  = { path = "../../core", version = "^0.7.4" }
ankurah-proto = { path = "../../proto", version = "^0.7.4" }

tokio       = { version = "1.40", features = ["full"] }
async-trait = "0.1"
anyhow      = "1.0"
tracing     = "0.1"
