[package]
name    = "ankurah-websocket-client-wasm"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
react   = ["ankurah-react-signals"]

[dependencies]
ankurah            = { path = "../../ankurah", features = ["derive", "wasm", "react"], version = "0.1.0" }
ankurah-core       = { path = "../../core", version = "0.1.0" }
ankurah-proto      = { path = "../../proto", version = "0.1.0" }
ankurah-derive     = { path = "../../derive", version = "0.1.0" }
serde              = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
uuid               = { version = "1.7", features = ["v4", "serde"] }

ankurah-react-signals = { path = "../../react-signals", optional = true }
wasm-bindgen = "0.2.84"
futures = "0.3.30"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.76", features = [
    "BinaryType",
    "WebSocket",
    "Event",
    "ErrorEvent",
    "CloseEvent",
    "MessageEvent",
    "IdbDatabase",
    "IdbTransaction",
    "IdbObjectStore",
    "IdbIndex",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbFactory",
    "Window",
    "IdbTransactionMode",
    "IdbKeyRange",
    "IdbCursor",
    "IdbCursorWithValue",
    "IdbVersionChangeEvent",
    "Event",
    "DomException",
    "EventTarget",
    "IdbIndexParameters",
] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
bincode = "1.3.3"
reactive_graph = { git = "https://github.com/ankurah/leptos", branch = "reactive_graph_pub_items", features = [
    "effects",
] }
any_spawner = { git = "https://github.com/ankurah/leptos", branch = "reactive_graph_pub_items", version = "0.2.0", features = [
    "wasm-bindgen",
] }
console_error_panic_hook = "0.1.7"
async-trait = "0.1.83"
anyhow = "1.0.95"
ulid = "1.1.3"
send_wrapper = { version = "0.6.0", features = ["futures"] }
tracing = "0.1"
tracing-wasm = "0.2"
thiserror = "2.0.9"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

    [package.metadata.wasm-pack.profile.dev.wasm-bindgen]
    # Should we enable wasm-bindgen's debug assertions in its generated JS glue?
    debug-js-glue = true
    # Should wasm-bindgen demangle the symbols in the "name" custom section?
    demangle-name-section = true
    # Should we emit the DWARF debug info custom sections?
    dwarf-debug-info = true
    # Should we omit the default import path?
    omit-default-module-path = false
    # Controls whether wasm-bindgen will split linked modules out into their own files. Enabling this is recommended, because it allows lazy-loading the linked modules and setting a stricter Content Security Policy. Only available in wasm-bindgen 0.2.95 and later.
    split-linked-modules = false
[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
