[package]
name          = "ankurah-websocket-server"
version       = "0.2.1"
edition       = "2021"
description   = "Ankurah WebSocket Server - A WebSocket server for Ankurah"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ankurah-websocket-server"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[dependencies]

# Base dependencies
ankurah-proto = { path = "../../proto", version = "^0.2.1" }
ankurah-core  = { path = "../../core", version = "^0.2.1" }
anyhow        = "1.0"
bincode       = "1.3"
serde         = { version = "1.0.203", features = ["derive", "serde_derive"] }
futures-util  = "0.3"
tracing       = "0.1"
async-trait   = "0.1"


axum       = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio      = { version = "1.38", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
tower      = { version = "0.5" }
