[package]
name = "leptos-example"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { git = "https://github.com/synestheticsystems/leptos", branch = "reactive_graph_pub_items", features = ["csr", "nightly"] }
ankurah-web-client = { path = "../../web-client" }
example-model = { path = "../model" }
