[package]
name    = "leptos-example"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { git = "https://github.com/synestheticsystems/leptos", branch = "reactive_graph_pub_items", features = [
    "csr",
    "nightly",
] }
ankurah-websocket-client-wasm = { path = "../../connectors/websocket-client-wasm" }
ankurah-storage-indexeddb-wasm = { path = "../../storage/indexeddb-wasm" }
ankurah = { path = "../../ankurah" }
example-model = { path = "../model" }
send_wrapper = "0.6.0"
