[package]
name    = "example-model"
version = "0.3.5"
edition = "2021"
publish = false

[features]
default = ["wasm"]
wasm    = ["dep:wasm-bindgen", "ankurah/wasm", "ankurah/react"]

[dependencies]
ankurah        = { path = "../../ankurah", features = ["derive"], version = "^0.3.5" }
serde          = { version = "1.0", features = ["derive"] }
wasm-bindgen   = { version = "0.2", optional = true }
reactive_graph = { version = "0.1.4", features = ["effects"], optional = true }
tsify          = { version = "0.4" }

tracing = { version = "0.1" }
