[package]
name    = "ankurah-example-server"
version = "0.7.12"
edition = "2021"
publish = false

[dependencies]
ankurah                  = { path = "../../ankurah", version = "=0.7.12" }
ankurah-websocket-server = { path = "../../connectors/websocket-server", version = "=0.7.12" }
ankurah-storage-sled     = { path = "../../storage/sled", version = "=0.7.12" }
example-model            = { path = "../model" }
tracing                  = "0.1"
tracing-subscriber       = "0.3"
tokio                    = { version = "1.38", features = ["rt-multi-thread"] }
anyhow                   = "1.0"
chrono                   = { version = "0.4", default-features = false, features = ["serde"] }
serde_json               = "1.0"
