[package]
name    = "example-wasm-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ankurah = { path = "../../ankurah", features = ["derive", "wasm"], version = "^0.1.5" }
ankurah-websocket-client-wasm = { path = "../../connectors/websocket-client-wasm", features = [
    "react",
], version = "^0.1.1" }
ankurah-storage-indexeddb-wasm = { path = "../../storage/indexeddb-wasm", version = "^0.1.2" }
example-model = { path = "../model", features = ["wasm"], version = "0.1.0" }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
tracing = "0.1.40"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"
any_spawner = { version = "0.2.0", features = ["wasm-bindgen"] }
reactive_graph = { version = "0.1.4", features = ["effects"] }
tokio = { version = "1.39.0", features = ["sync"] }
lazy_static = "1.4.0"
once_cell = "1.19.0"

    [package.metadata.wasm-pack.profile.dev.wasm-bindgen]
    dwarf-debug-info = true
