[package]
name    = "example-wasm-bindings"
version = "0.6.8"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ankurah                        = { path = "../../ankurah", features = ["derive", "wasm"], version = "^0.6.8" }
ankurah-signals                = { path = "../../signals", features = ["wasm"], version = "^0.6.8" }
ankurah-websocket-client-wasm  = { path = "../../connectors/websocket-client-wasm", version = "^0.6.8" }
ankurah-storage-indexeddb-wasm = { path = "../../storage/indexeddb-wasm", version = "^0.6.8" }
example-model                  = { path = "../model", features = ["wasm"], version = "0.6.8" }
wasm-bindgen                   = "0.2.84"
wasm-bindgen-futures           = "0.4.42"
wasm-logger                    = "0.2.0"
tracing                        = "0.1.40"
tracing-wasm                   = "0.2.1"
console_error_panic_hook       = "0.1.7"

send_wrapper = { version = "0.6.0" }
tokio        = { version = "1.39.0", features = ["sync"] }
lazy_static  = "1.4.0"
once_cell    = "1.19.0"
##### patch - something is wrong with the uuid crate for wasm
getrandom = { version = "0.3", features = ["wasm_js"] }
###### 

    [package.metadata.wasm-pack.profile.dev.wasm-bindgen]
    dwarf-debug-info = true

    [package.metadata.wasm-pack.profile.release]
    wasm-opt = false
