[package]
name    = "ankurah-storage-common"
version = "0.6.0"
edition = "2024"

[dependencies]
ankql         = { path = "../../ankql" }
ankurah-core  = { path = "../../core" }
ankurah-proto = { path = "../../proto" }
indexmap      = "2.0"
serde         = { version = "1.0", features = ["derive"] }
tracing       = { version = "0.1.40" }

[dev-dependencies]
ankurah-derive = { path = "../../derive" }
