[package]
name    = "ankurah-storage-common"
version = "0.6.0"
edition = "2024"

[dependencies]
ankql         = { path = "../../ankql", version = "^0.6.0" }
ankurah-core  = { path = "../../core", version = "^0.6.0" }
ankurah-proto = { path = "../../proto", version = "^0.6.0" }
indexmap      = "2.0"
serde         = { version = "1.0", features = ["derive"] }
tracing       = { version = "0.1.40" }

[dev-dependencies]
ankurah-derive = { path = "../../derive", version = "^0.6.0" }
