[package]
name          = "ankurah-storage-common"
version       = "0.7.16"
edition       = "2024"
description   = "Ankurah storage engine common libraries"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ankurah-storage-common"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[dependencies]
ankql         = { path = "../../ankql", version = "=0.7.16" }
ankurah-core  = { path = "../../core", version = "=0.7.16" }
ankurah-proto = { path = "../../proto", version = "=0.7.16" }
futures       = "0.3"
indexmap      = "2.0"
serde         = { version = "1.0", features = ["derive"] }
tracing       = { version = "0.1.40" }

[dev-dependencies]
ankurah-derive = { path = "../../derive", version = "=0.7.16" }
