[package]
name          = "ankurah-storage-postgres"
version       = "0.3.3"
edition       = "2021"
description   = "Ankurah storage engine using Postgres"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ankurah-storage-postgres"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
bb8            = "0.9"
bb8-postgres   = "0.9"
uuid           = { version = "1.3", features = ["v4", "serde"] }
ulid           = "1.1"
bincode        = "1.3"
anyhow         = "1.0"
tokio          = { version = "1.36", features = ["full"] }

ankql         = { path = "../../ankql", version = "^0.3.3" }
ankurah-core  = { path = "../../core", version = "^0.3.3" }
ankurah-proto = { path = "../../proto", version = "^0.3.3" }
tracing       = "0.1"
async-trait   = "0.1"
futures-util  = "0.3"
