[package]
name          = "ankurah-storage-postgres"
version       = "0.7.15"
edition       = "2021"
description   = "Ankurah storage engine using Postgres"
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ankurah-storage-postgres"
homepage      = "https://github.com/ankurah/ankurah"
repository    = "https://github.com/ankurah/ankurah"

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
serde_json     = "1"
bb8            = "0.9"
bb8-postgres   = "0.9"
ulid           = "1.1"
bincode        = "1.3"
anyhow         = "1.0"
thiserror      = "2.0"
tokio          = { version = "1.36", features = ["full"] }

ankql         = { path = "../../ankql", version = "=0.7.15" }
ankurah-core  = { path = "../../core", version = "=0.7.15" }
ankurah-proto = { path = "../../proto", version = "=0.7.15", features = ["postgres"] }
tracing       = "0.1"
async-trait   = "0.1"
futures-util  = "0.3"
bytes         = "1.5"

[dev-dependencies]
ankurah                = { path = "../../ankurah", version = "=0.7.15", features = ["derive"] }
tokio                  = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber     = "0.3"
ctor                   = "0.2"
serde                  = { version = "1.0", features = ["derive"] }
testcontainers         = { version = "0.23", features = ["reusable-containers"] }
testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
